--- a/talent.css
+++ b/talent.css
@@ -1,3 +1,310 @@
+/* * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
+
+/* Navigation bar */
+/* 
+header {
+  position: sticky;
+  top: 0px;
+  z-index: 100;
+  background-color: white;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  width: 85%;
+  margin: auto;
+  background-color: white;
+}
+
+.navlist {
+  list-style: none;
+  display: flex;
+}
+
+.navlist li a {
+  text-decoration: none;
+}
+
+.listone {
+  border-bottom: 2.5px solid rgb(231, 51, 43);
+  padding: 15px 10px;
+  margin: 60px 25px 80px;
+}
+
+.listone a {
+  color: rgb(22, 22, 23);
+}
+
+.three {
+  padding: 15px 10px;
+  margin: 60px 25px 80px;
+}
+
+.three a {
+  color: rgb(22, 22, 23);
+}
+
+.hire-but1 {
+  background-color: rgb(231, 51, 43);
+  border-bottom-right-radius: 10px;
+  padding: 10px 40px;
+  margin: 67px 25px 82px;
+  border: none;
+  font-size: 1rem;
+} */
+
+/* hero section */
+
+/* .hire-but1 a {
+  color: white;
+  text-decoration: none;
+}
+
+.hero {
+  width: 85%;
+  height: 800px;
+  padding-top: 10%;
+  margin: auto;
+}
+
+.section-text {
+  float: left;
+  width: 60%;
+  text-align: left;
+  padding: 80px 0% 0% 0%;
+}
+
+.section-text h1 {
+  font-size: 2.8rem;
+}
+
+.section-text span {
+  color: rgb(231, 51, 43);
+}
+
+.section-text span img {
+  position: relative;
+  left: -9%;
+  top: 1.5rem;
+}
+
+.section-text p {
+  width: 65%;
+  color: rgb(173, 173, 173);
+  font-size: 1.25rem;
+  padding-top: 30px;
+}
+
+h1 span img {
+  width: 70px;
+  height: 50px;
+}
+
+.div-btn {
+  width: 100%;
+}
+
+.hire-but2 {
+  background-color: rgb(231, 51, 43);
+  border-bottom-right-radius: 10px;
+  padding: 10px 50px;
+  margin: 30px 10px 80px 0px;
+  border: none;
+  font-size: 1rem;
+}
+
+.hire-but2 a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.join-but {
+  background-color: rgb(88, 88, 88);
+  border-bottom-right-radius: 10px;
+  padding: 10px 50px;
+  margin: 30px 25px 80px 5px;
+  border: none;
+  font-size: 1rem;
+}
+
+.join-but a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.section-image {
+  float: right;
+  width: 40%;
+}
+
+.section-image img {
+  width: 85%;
+  position: relative;
+  left: 10%;
+  top: -1rem;
+}
+
+.section-image span img {
+  height: 20%;
+  width: 40%;
+  position: relative;
+  left: 69%;
+  top: -11rem;
+  z-index: 1;
+  opacity: 0.6;
+} */
+
+/* responsive */
+
+/* @media screen and (max-width: 1150px) {
+  .listone,
+  .three {
+    display: none;
+  }
+
+  .hero {
+    display: block;
+    width: 95%;
+  }
+
+  .section-image span img {
+    display: none;
+  }
+
+  .section-text {
+    width: 100%;
+    text-align: center;
+    padding: 20px 0% 0% 0%;
+  }
+
+  .section-text p {
+    margin: auto;
+  }
+
+  .section-text span img {
+    position: relative;
+    left: -7.5%;
+    top: 1.5rem;
+  }
+
+  .section-text p {
+    width: 82%;
+    color: rgb(122, 122, 122);
+  }
+
+  .section-image {
+    float: left;
+    width: 100%;
+  }
+
+  .section-image img {
+    width: 80%;
+    position: relative;
+    left: 10%;
+    top: -2rem;
+  }
+
+  .section-image span img {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .navbar img {
+    width: 90px;
+  }
+  .section-text h1 {
+    padding: 0px 20px;
+  }
+
+  .hire-but2 {
+    padding: 10px 30px;
+    margin: 30px 10px 80px 0px;
+  }
+
+  .join-but {
+    padding: 10px 30px;
+    margin: 30px 15px 80px 5px;
+  }
+
+  .section-text span img {
+    position: relative;
+    left: -15%;
+    top: 1.5rem;
+  }
+
+  .section-image {
+    margin: auto;
+  }
+
+  .section-image img {
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .section-text p {
+    font-size: 14px;
+  }
+
+  .hire-but1 {
+    padding: 10px 20px;
+    margin: 67px 15px 82px;
+    font-size: 14px;
+  }
+
+  .section-text h1 {
+    font-size: 1.8rem;
+  }
+
+  .hire-but2 {
+    padding: 10px 20px;
+    margin: 30px 10px 80px 0px;
+    font-size: 14px;
+  }
+
+  .join-but {
+    padding: 10px 20px;
+    margin: 30px 10px 80px 5px;
+    font-size: 14px;
+  }
+
+  .section-image img {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .hire-but2 {
+    margin: 20px 15px 5px;
+  }
+
+  .join-but {
+    margin: 15px 10px 80px 5px;
+  }
+
+  .section-text span img {
+    display: none;
+  }
+} */ 
+
+
+
+
+
+
 @font-face {
     font-family: Averta;
     src: url(https://res.cloudinary.com/dafsch2zs/raw/upload/v1596618987/Zuri%20Landing/AvertaDemoPECuttedDemo-Regular_dghpn7.otf);
@@ -32,7 +339,7 @@ a:hover{
 }
 
 .intro-container {
-    background-image: url("/hero-bg.svg");
+    background-image: url("img/hero-bg.svg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -267,3 +574,16 @@ footer hr {
 
     }
 } 
+
+
+
+
+
+
+
+
+
+
+
+
+
